Revert "Fixed button colour on dark mode"
This reverts commit 3a292e63087786b296fb235c2284be893546de10.

--- a/src/components/utils/Donations/index.module.css
+++ b/src/components/utils/Donations/index.module.css
@@ -16,16 +16,12 @@
 
 .donationButton {
   background-color: #ffc43b !important;
-  color: #222222;
+  color: #222222 !important;
   margin: auto;
   padding: 0.7rem 1rem !important;
   font-size: 18px !important;
 }
 
-:not(:global(.theme-dark)) .donationButton {
-  color: #222222;
-}
-
-:global(.theme-dark) .donationButton {
-  color: #ffffff;
-}
+/* :global(.theme-dark) .donationButton {
+  background-color: #222222 !important;
+} */
